@@ -4,6 +4,7 @@ ver 0.15.13 (2010/??/??)
   - httpd: fix random data in stream title
 * input:
   - rewind: update MIME not only once
+  - rewind: enable for MMS
 
 
 ver 0.15.12 (2010/07/20)
